# mgs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-13-mini-git-server.md
docs/superpowers/specs/: 2026-07-13-mini-git-server-design.md
migrations/: 001_init.sql
src/: auth.rs  db.rs  git.rs  http.rs  lib.rs  models.rs  ssh.rs
src/cli/: acl.rs  config.rs  init.rs  mod.rs  repo.rs  user.rs
tests/: e2e.rs  integration.rs
tests/e2e/: branch.rs  clone.rs  file.rs  http.rs  key.rs  main.rs  pull.rs  push.rs  repo.rs  user.rs
tests/integration/: init.rs  main.rs  repo.rs  user.rs  workflow.rs
tests/unit/: auth.rs  db.rs  git.rs  http.rs  main.rs  ssh.rs
