[package]
name = "mgs"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "mgs"
path = "src/bin/mgs.rs"

[[bin]]
name = "mgs-ssh"
path = "src/bin/mgs_ssh.rs"

[dependencies]
rusqlite = { version = "0.35", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
