[package]
name = "mgs"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "mgs"
path = "src/bin/mgs.rs"

[[bin]]
name = "mgs-ssh"
path = "src/bin/mgs_ssh.rs"

[dependencies]
rusqlite = { version = "0.35", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
rand = "0.9"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
